--- a/src/JohnDoe.BookStore.Application.RestService/appsettings.json
+++ b/src/JohnDoe.BookStore.Application.RestService/appsettings.json
@@ -6,5 +6,30 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "path": "Logs/api_.log",
+                  "rollingInterval": "Day",
+                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}\t[{Level:u3}]\t[{_CorrelationId}]\t{Message:lj}{NewLine}{Exception}"
+                }
+              }
+            ],
+            "Filter": [
+              {
+                "Name": "ByIncludingOnly",
+                "Args": {
+                  "expression": "SourceContext not like 'Ihis%' and SourceContext <> 'Microsoft.AspNetCore.Hosting.Diagnostics'"
+                }
+              }
+            ]
+          }
+        }
+      },
 }
